// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prepare for GRT > renders help mode without crashing 1`] = `
<DocumentFragment>
  <div
    class="prepare-for-grt"
  >
    <div>
      <div
        class="help-page-intro margin-bottom-4"
      >
        <h1
          aria-live="polite"
          class="easi-h1 margin-bottom-0 margin-top-3"
          tabindex="-1"
        >
          Prepare for Governance Review Team meeting
        </h1>
        <a
          class="usa-link display-inline-block margin-y-1"
          href="/help/it-governance"
        >
          <span
            class="easi-tag system-profile__tag text-primary-dark bg-primary-lighter padding-bottom-1"
            data-testid="tag"
          >
            IT Governance
          </span>
        </a>
        <div
          class="font-body-lg margin-top-1 margin-bottom-0 line-height-body-5"
        >
          Learn what you need in order to be successful, including what to expect during and after the meeting, what to prepare for, and what to bring to the meeting.
        </div>
      </div>
      <h2
        class="font-heading-xl line-height-heading-2 margin-top-3 margin-bottom-2"
      >
        What to expect
      </h2>
      <ul
        class="list-style-none margin-0 padding-0"
      >
        <li
          class="line-height-sans-6"
        >
          Subject Matter Experts (SMEs) from various components will help you refine your Business Case. Their role is to ensure that you and your project team have considered and documented information about any potential alternatives that the Governance Review Board (GRB) may consider viable, including pros, cons, and estimated costs, as well as the technical feasibility and implementation process requirements for each solution.
        </li>
        <li
          class="line-height-sans-6 margin-top-1"
        >
          At the meeting, the Governance Review Team (GRT) SMEs will discuss your draft Business Case and provide feedback both to you and the GRB about the alternative solutions you’re considering to meet your business need.
        </li>
      </ul>
    </div>
    <div
      class="margin-top-3 padding-2 bg-base-lightest"
    >
      <h3
        class="margin-top-0 margin-bottom-2 font-heading-lg line-height-heading-2"
      >
        Possible questions
      </h3>
      <div
        class="line-height-sans-6"
      >
        The GRT SMEs may ask you a series of questions after you walk them through your Business Case. The best way to prepare for this conversation is to review and be able to respond to example questions as they pertain to your Business Case. Example questions are included in the sections below.
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="capital-planning-and-investment-control-cpic"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            Capital Planning and Investment Control (CPIC)
          </button>
        </div>
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="enterprise-architecture-and-data"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            Enterprise Architecture and Data
          </button>
        </div>
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="shared-services-and-data-hosting"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            Shared Services and Data Hosting
          </button>
        </div>
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="it-security-privacy"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            IT Security/Privacy
          </button>
        </div>
      </div>
    </div>
    <div>
      <h3
        class="font-heading-lg margin-top-6 margin-bottom-2"
      >
        What to bring
      </h3>
      <div>
        The following are important items to have with you at the GRT meeting:
      </div>
      <ul
        class="list-style-middot-inner line-height-body-5"
      >
        <li>
          a copy of your Business Case
        </li>
        <li>
          any contracting materials that you might have in place, for example, a Statement of Work (SOW), a Performance Work Statement (PWS), or other contracting document
        </li>
        <li>
          additional materials that you’d like to talk through, such as a concept diagram
        </li>
      </ul>
    </div>
    <div
      class="usa-summary-box desktop:grid-col-6 margin-top-5"
      data-testid="summary-box"
    >
      <div
        class="usa-summary-box__body"
      >
        <h3
          class="usa-summary-box__heading"
        >
          Need help?
        </h3>
        <div
          class="usa-summary-box__text"
        >
          <div
            class="margin-top-2 margin-bottom-05"
          >
            Contact the Governance team:
          </div>
          <div>
            <a
              class="usa-link"
              href="mailto:IT_Governance@cms.hhs.gov"
            >
              IT_Governance@cms.hhs.gov
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Prepare for GRT > renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="prepare-for-grt"
  >
    <div>
      <h1
        aria-live="polite"
        class="easi-h1 line-height-heading-2"
        tabindex="-1"
      >
        Prepare for Governance Review Team meeting
      </h1>
      <h2
        class="font-heading-xl line-height-heading-2 margin-top-3 margin-bottom-2"
      >
        What to expect
      </h2>
      <ul
        class="list-style-none margin-0 padding-0"
      >
        <li
          class="line-height-sans-6"
        >
          Subject Matter Experts (SMEs) from various components will help you refine your Business Case. Their role is to ensure that you and your project team have considered and documented information about any potential alternatives that the Governance Review Board (GRB) may consider viable, including pros, cons, and estimated costs, as well as the technical feasibility and implementation process requirements for each solution.
        </li>
        <li
          class="line-height-sans-6 margin-top-1"
        >
          At the meeting, the Governance Review Team (GRT) SMEs will discuss your draft Business Case and provide feedback both to you and the GRB about the alternative solutions you’re considering to meet your business need.
        </li>
      </ul>
    </div>
    <div
      class="margin-top-3 padding-2 bg-base-lightest"
    >
      <h3
        class="margin-top-0 margin-bottom-2 font-heading-lg line-height-heading-2"
      >
        Possible questions
      </h3>
      <div
        class="line-height-sans-6"
      >
        The GRT SMEs may ask you a series of questions after you walk them through your Business Case. The best way to prepare for this conversation is to review and be able to respond to example questions as they pertain to your Business Case. Example questions are included in the sections below.
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="capital-planning-and-investment-control-cpic"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            Capital Planning and Investment Control (CPIC)
          </button>
        </div>
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="enterprise-architecture-and-data"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            Enterprise Architecture and Data
          </button>
        </div>
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="shared-services-and-data-hosting"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            Shared Services and Data Hosting
          </button>
        </div>
      </div>
      <div
        class="margin-top-2"
      >
        <div
          class="easi-collapsable-link"
        >
          <button
            aria-controls="it-security-privacy"
            aria-expanded="false"
            class="usa-button usa-button--unstyled display-flex flex-align-center"
            data-testid="collapsable-link"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            IT Security/Privacy
          </button>
        </div>
      </div>
    </div>
    <div>
      <h3
        class="font-heading-lg margin-top-6 margin-bottom-2"
      >
        What to bring
      </h3>
      <div>
        The following are important items to have with you at the GRT meeting:
      </div>
      <ul
        class="list-style-middot-inner line-height-body-5"
      >
        <li>
          a copy of your Business Case
        </li>
        <li>
          any contracting materials that you might have in place, for example, a Statement of Work (SOW), a Performance Work Statement (PWS), or other contracting document
        </li>
        <li>
          additional materials that you’d like to talk through, such as a concept diagram
        </li>
      </ul>
    </div>
    <div
      class="usa-summary-box desktop:grid-col-6 margin-top-5"
      data-testid="summary-box"
    >
      <div
        class="usa-summary-box__body"
      >
        <h3
          class="usa-summary-box__heading"
        >
          Need help?
        </h3>
        <div
          class="usa-summary-box__text"
        >
          <div
            class="margin-top-2 margin-bottom-05"
          >
            Contact the Governance team:
          </div>
          <div>
            <a
              class="usa-link"
              href="mailto:IT_Governance@cms.hhs.gov"
            >
              IT_Governance@cms.hhs.gov
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
